--- a/map_with_button.html
+++ b/map_with_button.html
@@ -49,7 +49,7 @@
     const defaultCenter = [-71.245, 42.254],
           defaultZoom = 8,
           layerId     = 'municipalitiesbycommunitytype-c8ks3h copy',
-          nameField   = 'Municipali',
+          nameField   = 'Municipality',
           bounds      = [[-72.5,41.5],[-69.5,43.0]],
           geojsonURL  = './MunicipalitiesByCommunityType.geojson';
 
