--- a/map_with_button.html
+++ b/map_with_button.html
@@ -2,16 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Map with Full‑GeoJSON Highlight (Debug)</title>
+  <title>Map with Full‑GeoJSON Highlight</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Roboto & Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
   <!-- Mapbox GL JS -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"/>
 
   <style>
     body, html { margin:0; padding:0; height:100%; font-family:'Roboto',sans-serif; }
@@ -34,28 +34,32 @@
 </head>
 <body>
 
-  <!-- UI -->
-  <button id="homeButton" title="Home"><span class="material-icons">home</span></button>
+  <!-- Home & Toggle Buttons -->
+  <button id="homeButton" title="Default View">
+    <span class="material-icons">home</span>
+  </button>
   <div class="top-bar">
     <button id="toggleMapboxLayer">Toggle Municipalities Layer</button>
   </div>
 
-  <!-- Map -->
+  <!-- Map Container -->
   <div id="map"></div>
 
   <script>
-    // --- CONFIG ---
+    // --- CONFIGURATION ---
     mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
-    const defaultCenter = [-71.245, 42.254],
-          defaultZoom = 8,
-          layerId     = 'municipalitiesbycommunitytype-c8ks3h copy',
-          nameField   = 'Municipality',
-          bounds      = [[-72.5,41.5],[-69.5,43.0]],
-          geojsonURL  = './MunicipalitiesByCommunityType.geojson';
+    const defaultCenter   = [-71.245, 42.254];
+    const defaultZoom     = 8;
+    const vectorLayerId   = 'municipalitiesbycommunitytype-c8ks3h copy';
+    const tileNameField   = 'Municipali';      // the field in the vector‑tile layer
+    const geojsonNameField= 'Municipality';    // the field in your full GeoJSON
+    const bounds          = [[-72.5,41.5],[-69.5,43.0]];
+    const geojsonURL      = './MunicipalitiesByCommunityType.geojson';
 
+    // will hold full‑geojson features once loaded
     let municipalitiesData = null;
 
-    // Initialize map
+    // initialize the map
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
@@ -66,33 +70,30 @@
       maxBounds: bounds
     });
 
-    // Helper: compute full bounds
+    // compute full bounding box of a feature
     function getFeatureBounds(feature) {
       const geom = feature.geometry;
       const pts = (geom.type === 'MultiPolygon')
         ? geom.coordinates.flat(2)
         : geom.coordinates[0];
-      const bb = pts.reduce(
+      return pts.reduce(
         (b, c) => b.extend(c),
         new mapboxgl.LngLatBounds()
       );
-      return bb;
     }
 
-    // Highlight & zoom feature
+    // highlight & zoom to a full‑GeoJSON feature
     function highlightFeature(feature) {
-      console.log('🔔 highlightFeature()', feature.properties[nameField]);
+      console.log('🔔 highlightFeature()', feature.properties[geojsonNameField]);
       const bb = getFeatureBounds(feature);
-      console.log('   → bounds:', bb.toArray());
       map.fitBounds(bb, { padding: 40, duration: 800 });
-
       map.getSource('highlight-town').setData({
         type: 'FeatureCollection',
         features: [feature]
       });
     }
 
-    // Clear highlight
+    // clear the highlight layer
     function clearHighlight() {
       console.log('🧹 clearHighlight()');
       map.getSource('highlight-town').setData({
@@ -101,8 +102,11 @@
       });
     }
 
+    // wait for the map to load
     map.on('load', () => {
-      console.log('🗺️ Map loaded, fetching GeoJSON…');
+      console.log('🗺️ Map loaded — fetching full GeoJSON…');
+
+      // 1) fetch the complete municipalities GeoJSON
       fetch(geojsonURL)
         .then(r => {
           console.log('   GEOJSON fetch status:', r.status);
@@ -114,7 +118,7 @@
         })
         .catch(err => console.error('❌ GeoJSON load error:', err));
 
-      // Add highlight source + layers
+      // 2) add a GeoJSON source & layers for highlighting
       map.addSource('highlight-town', {
         type: 'geojson',
         data: { type: 'FeatureCollection', features: [] }
@@ -123,57 +127,70 @@
         id: 'highlight-fill',
         type: 'fill',
         source: 'highlight-town',
-        paint: { 'fill-color': '#FFEB3B', 'fill-opacity': 0.6 }
+        paint: {
+          'fill-color': '#FFEB3B',
+          'fill-opacity': 0.6
+        }
       });
       map.addLayer({
         id: 'highlight-line',
         type: 'line',
         source: 'highlight-town',
-        paint: { 'line-color': '#FF9800', 'line-width': 2 }
+        paint: {
+          'line-color': '#FF9800',
+          'line-width': 2
+        }
       });
 
-      // UI handlers
+      // 3) wire up the Toggle button
       document.getElementById('toggleMapboxLayer').onclick = () => {
-        const vis = map.getLayoutProperty(layerId, 'visibility') || 'visible';
-        map.setLayoutProperty(layerId, 'visibility', vis === 'none' ? 'visible' : 'none');
+        const v = map.getLayoutProperty(vectorLayerId, 'visibility') || 'visible';
+        map.setLayoutProperty(vectorLayerId, 'visibility', v === 'none' ? 'visible' : 'none');
       };
+
+      // 4) wire up the Home button
       document.getElementById('homeButton').onclick = () => {
         map.flyTo({ center: defaultCenter, zoom: defaultZoom, essential: true });
       };
 
-      // Click-to-search via vector tile property
-      map.on('click', layerId, e => {
-        console.log('📍 map click on layer:', layerId, e);
+      // 5) clicking on a vector‑tile polygon
+      map.on('click', vectorLayerId, e => {
+        console.log('📍 vector-tile click', e.features[0].properties[tileNameField]);
         if (!municipalitiesData) {
-          console.warn('➡️ municipalitiesData not yet loaded');
+          console.warn('➡️ Full GeoJSON not loaded yet');
           return;
         }
-        const clickedName = e.features[0].properties[nameField];
-        console.log('   clickedName =', clickedName);
-        if (!clickedName) return;
+        const clickedName = e.features[0].properties[tileNameField];
         const match = municipalitiesData.find(
-          f => f.properties[nameField]?.toLowerCase() === clickedName.toLowerCase()
+          f => f.properties[geojsonNameField]?.toLowerCase() === clickedName.toLowerCase()
         );
-        if (match) highlightFeature(match);
-        else console.warn('   No full-GeoJSON match for', clickedName);
+        if (match) {
+          highlightFeature(match);
+        } else {
+          console.warn('   No full-GeoJSON match for', clickedName);
+        }
       });
     });
 
-    // Listen for postMessages
+    // 6) listen for postMessages from search.html
     window.addEventListener('message', e => {
       console.log('📨 message received:', e.data);
       if (!municipalitiesData) {
-        console.warn('➡️ municipalitiesData not yet loaded');
+        console.warn('➡️ Full GeoJSON not loaded yet');
         return;
       }
-      const { type, name } = e.data;
+      const { type, name } = e.data || {};
       if (type === 'search-town') {
         console.log('🔎 search-town:', name);
+        const term = name.trim().toLowerCase();
         const match = municipalitiesData.find(
-          f => f.properties[nameField]?.toLowerCase() === name.trim().toLowerCase()
+          f => f.properties[geojsonNameField]?.toLowerCase() === term
         );
-        if (match) highlightFeature(match);
-        else console.warn('   No match for search term', name);
+        if (match) {
+          highlightFeature(match);
+        } else {
+          console.warn('   No match for search term', term);
+        }
       }
       else if (type === 'clear-town') {
         clearHighlight();
